--- a/server/public/index.html
+++ b/server/public/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>JEN Stack Code Challenge</title>
-    <script src="vendors/jquery.min.js" charset="utf-8"></script>
-    <script src="scripts/client.js" charset="utf-8"></script>
-  </head>
-  <body>
-    <h1>JEN Stack Code Challenge</h1>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Weekend jQuery Server Calculator</title>
+	<script src="vendors/jquery-3.6.0.min.js"></script>
+	<script src="scripts/client.js"></script>
+	<link rel="stylesheet" href="styles/style.css">
+</head>
+
+<body>
+
+	<h1>JEN Stack Code Challenge</h1>
     <input type='text' id='whoseJokeIn' placeholder='whose joke' />
     <input type='text' id='questionIn' placeholder='question' />
     <input type='text' id='punchlineIn' placeholder='punchline' />
@@ -15,5 +20,7 @@
     <h2>Jokes:</h2>
     <div id='outputDiv'>
     </div>
-  </body>
+	
+</body>
+
 </html>
